--- a/Vue - To Do List/vue-todolist/package.json
+++ b/Vue - To Do List/vue-todolist/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.13.2",
     "core-js": "^3.8.3",
     "vee-validate": "^4.13.2",
     "vue": "^3.2.13"
